--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                     <span class="wow slideInLeft" data-wow-delay=".2s">Marufa</span>
                                 </h2>
                                 <p>
-                                    <span class="wow slideInLeft" data-wow-delay=".5s">Website Developer. Based in Bangladesh.</span>
+                                    <span class="wow slideInLeft" data-wow-delay=".5s">Website design. Based in Bangladesh.</span>
                                 </p>
                             </div>
                         </div>
