--- a/index.html
+++ b/index.html
@@ -1,353 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Title -->
-    <title>Marufa</title>
-    <!-- Favicon -->
-    <link href="favicon.png" type="image/png" rel="icon">
-    <link rel="stylesheet" href="main.css">
-
-</head>
-
-<body id="body" data-spy="scroll" data-target="#menu-list">
-
-    <!--  start page loader  -->
-    
-	<div id="preloader">
-		<div class="scroll-static"></div>
-	</div>
-
-    <!--  end page loader  -->
-
-    <!-- begin of main-wrapper -->
-    <div class="main-wrapper">
-        <!-- begin of navbar -->
-        <div class="nav-bar">
-            <!-- begin of scroll-indicator -->
-            <div class="scroll-indicator"></div>
-            <nav>
-                <ul id="menu-list">
-                    <li class="nav-item"><a class="active nav-link" href="#body" data-text="Home">
-                            <span>01</span>Home
-                        </a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about" data-text="About">
-                            <span>02</span>About
-                        </a></li>
-                    <li class="nav-item"><a class="nav-link" href="#services" data-text="Services">
-                            <span>03</span>Skillset
-                        </a></li>
-                    <li class="nav-item"><a class="nav-link" href="#experience" data-text="Experience">
-                            <span>04</span>Experience
-                        </a></li>
-                    <li class="nav-item"><a class="nav-link" href="#works" data-text="Projects">
-                            <span>05</span>Projects
-                        </a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact" data-text="Contact">
-                            <span>06</span>Contact
-                        </a></li>
-                </ul>
-            </nav>
-            <div class="nav-footer">
-                <p class="nav-copyright">&copy; Copyright 2019<br>All rights reserved</p>
-            </div>
-        </div>
-        <!-- end of navbar -->
-        <!-- begin of main-content -->
-        <div class="main-content">
-            <!-- begin of header -->
-            <header>
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-7">
-                            <!-- logo -->
-                            <div class="logo">
-                                <a href="index.html">DM</a>
-                            </div>
-                        </div>
-                        <div class="col-5">
-                            <a href="mailto:marufajhuma1@gmail.com" class="default-btn header-action-btn"><i class="ti-agenda"></i> Contact</a>
-                            <div class="default-btn menu-btn">
-                                <i class="ti-menu"></i>
-                                <i class="ti-close"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </header>
-            <!-- end of header -->
-
-            <!-- begin of home-wrapper -->
-            <div class="home-wrapper">
-                <div class="container-fluid">
-                    <div class="row align-items-center">
-                        <div class="col-md-5 col-sm-5">
-                            <div class="hero-img wow fadeIn" data-wow-delay=".2s">
-                                <div class="shape"></div>
-                                <!-- hero image -->
-                                <img class="img-fluid" src="user.jpg" alt="">
-                            </div>
-                        </div>
-                        <div class="col-md-7 col-sm-7">
-                            <div class="hero-content">
-                                <h2 class="intro-name">
-                                    <span class="wow slideInLeft">Hey, I am</span>
-                                    <span class="wow slideInLeft" data-wow-delay=".2s">Marufa</span>
-                                </h2>
-                                <p>
-                                    <span class="wow slideInLeft" data-wow-delay=".5s">Website Developer. Based in Bangladesh.</span>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- end of home-wrapper -->
-
-            <!-- begin of about-wrapper -->
-            <div id="about" class="wrapper about-wrapper">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <!-- section heading -->
-                            <h3 class="wrapper-heading">About Me</h3>
-
-                            <h4 class="about-sub-heading">I am a Freelancer, WordPress Expert, Blogger, Website Developer and Digital Marketer</h4>
-                            <p class="about-text">Working as a Front-end-developer at Ennex Business Development, Worked with Optical Coder as a Front-End-Developer</p>
-
-                            <!-- social profile links -->
-                            <div class="social-links">
-                                <span>I am avilable on</span>
-                                <ul>
-                                    <li><a href="https://www.facebook.com/devmarufa/" target="_blank" data-text="fa"><i class="ti-facebook"></i></a></li>
-                                    <li><a href="https://www.linkedin.com/in/devmarufa/" target="_blank" data-text="in"><i class="ti-linkedin"></i></a></li>
-                                    <li><a href="https://www.twitter.com/devmarufa/" target="_blank" data-text="tw"><i class="ti-twitter"></i></a></li>
-                                    <li><a href="https://www.instagram.com/devmarufa/" target="_blank" data-text="ig"><i class="ti-instagram"></i></a></li>
-                                    <li><a href="https://www.github.com/devmarufa/" target="_blank" data-text="git"><i class="ti-github"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- end of about-wrapper -->
-
-            <!-- begin of service-wrapper -->
-            <div id="services" class="wrapper service-wrapper">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <!-- section heading -->
-                            <h3 class="wrapper-heading">Skillset</h3>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-sm-6">
-                            <!-- service item -->
-                            <div class="service-item">
-                                <span class="ti-ruler-pencil"></span>
-                                <h4>Web Elements</h4>
-                                <p>HTML5, CSS3, Jquery, Bootstrap/Bulma/Material Design, WordPress</p>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-sm-6">
-                            <!-- service item -->
-                            <div class="service-item">
-                                <span class="ti-bar-chart-alt"></span>
-                                <h4>Graphics Elements</h4>
-                                <p>Adobe Photoshop, Adobe Illustrator, Motion design</p>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-sm-6">
-                            <!-- service item -->
-                            <div class="service-item">
-                                <span class="ti-hummer"></span>
-                                <h4>Digital Marketing</h4>
-                                <p>Social Media Management, Hubspot, Mailchimp</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- end of service-wrapper -->
-
-
-            <!-- begin of experience-wrapper -->
-            <div id="experience" class="wrapper experience-wrapper">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <!-- section heading -->
-                            <h3 class="wrapper-heading">Experience</h3>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="experience-single">
-                                <h4 class="company">Optical Coder (Former)</h4>
-                                <p class="position-name">Front-end Developer</p>
-                                <p class="mute-text">2016</p>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="experience-single">
-                                <h4 class="company">Ennex Business Development (Current)</h4>
-                                <p class="position-name">Front-end Developer</p>
-                                <p class="mute-text">2017</p>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="experience-single">
-                                <h4 class="company">Envato Market (Current)</h4>
-                                <p class="position-name">Template Designer</p>
-                                <p class="mute-text">2016</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- end of experience-wrapper -->
-
-            <!-- begin of works-wrapper -->
-            <div id="works" class="wrapper works-wrapper">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <!-- section heading -->
-                            <h3 class="wrapper-heading">Recent Works</h3>
-                        </div>
-                        <div class="col-md-12">
-                            <!-- work filter buttons -->
-                            <div class="filter-buttons">
-                                <button class="active" data-filter="*">Everything</button>
-                                <button data-filter=".web">Web</button>
-                                <button data-filter=".uiux">UI/UX</button>
-                                <button data-filter=".branding">Branding</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row zoom-gallery">
-                        <!-- work single item  -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 uiux">
-                            <div class="work-single-item">
-                                <a class="zoom-image" href="work-01.jpg">
-                                    <div class="tilt-wrap">
-                                        <img class="img-fluid" src="work-01.jpg" alt="">
-                                        <h6>Gold Left Palm</h6>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <!-- work single item  -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 web">
-                            <div class="work-single-item">
-                                <a class="zoom-image" href="work-02.jpg">
-                                    <div class="tilt-wrap">
-                                        <img class="img-fluid" src="work-02.jpg" alt="">
-                                        <h6>Shuvashini</h6>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <!-- work single item  -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 branding">
-                            <div class="work-single-item">
-                                <a class="zoom-image" href="work-03.jpg">
-                                    <div class="tilt-wrap">
-                                        <img class="img-fluid" src="work-03.jpg" alt="">
-                                        <h6>Duck in Gold</h6>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <!-- work single item  -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 web">
-                            <div class="work-single-item">
-                                <a class="zoom-image" href="work-04.jpg">
-                                    <div class="tilt-wrap">
-                                        <img class="img-fluid" src="work-04.jpg" alt="">
-                                        <h6>Black Body Paint</h6>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <!-- work single item  -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 branding">
-                            <div class="work-single-item">
-                                <a class="zoom-image" href="work-05.jpg">
-                                    <div class="tilt-wrap">
-                                        <img class="img-fluid" src="work-05.jpg" alt="">
-                                        <h6>Work Harder</h6>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <!-- work single item  -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 uiux">
-                            <div class="work-single-item">
-                                <a class="zoom-image" href="work-06.jpg">
-                                    <div class="tilt-wrap">
-                                        <img class="img-fluid" src="work-06.jpg" alt="">
-                                        <h6>Brown Water</h6>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <!-- view all work button  -->
-                        <div class="col-lg-12 text-center">
-                            <a href="#" class="default-btn all-work-btn">View All Works</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- end of works-wrapper -->
-
-            <!-- begin of contact-wrapper -->
-            <div id="contact" class="wrapper contact-wrapper">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-lg-12 text-center col-md-12">
-                            <div class="contact-details">
-                                <h4>Get in Touch</h4>
-                                <p>I am happy to answer any questions you may have, please contact me anytime</p>
-                            </div>
-                            <div class="contact-info">
-                                <a href="mailto:marufajhuma1@gmail.com"><p class="d-inline-block"><span class="ti-email"></span>Marufajhuma1@gmail.com</p></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- end of contact-wrapper -->
-
-            <!-- begin of contact-wrapper -->
-            <footer class="wrapper footer-wrapper">
-                <div class="container-fluid">
-                    <div class="col-md-12 text-center">
-                        <div class="footer-social">
-                            <a href="https://www.facebook.com/devmarufa/" target="_blank">Facebook</a>
-                            <a href="#https://www.linkedin.com/in/devmarufa/" target="_blank">Linkedin</a>
-                            <a href="#https://www.twitter.com/devmarufa/" target="_blank">Twitter</a>
-                            <a href="#https://www.instagram.com/devmarufa/" target="_blank">Instagram</a>
-                            <a href="https://www.github.com/devmarufa/" target="_blank">Github</a>
-                        </div>
-                        <p class="footer-copyright">© Copyright 2019</p>
-                    </div>
-                </div>
-            </footer>
-            <!-- end of contact-wrapper -->
-
-            <!-- scroll-to top -->
-            <a class="default-btn scroll-to-top" href="#body"><span class="ti-angle-up "></span></a>
-
-        </div>
-        <!-- end of main-content -->
-    </div>
-    <!-- end of main-wrapper -->
-
-    <!-- All JS -->
-    <script src="jquery.js"></script>
-
-</body>
-
-</html>
+Coming soon..!
