--- a/index.html
+++ b/index.html
@@ -183,14 +183,12 @@
                             <div class="filter-buttons">
                                 <button class="active" data-filter="*">Everything</button>
                                 <button data-filter=".web">Web</button>
-                                <button data-filter=".uiux">UI/UX</button>
-                                <button data-filter=".branding">Branding</button>
                             </div>
                         </div>
                     </div>
                     <div class="row zoom-gallery">
                         <!-- work single item  -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 uiux">
+                        <div class="col-lg-4 col-md-6 col-sm-6 web">
                             <div class="work-single-item">
                                 <a class="zoom-image" href="work-01.jpg">
                                     <div class="tilt-wrap">
@@ -212,7 +210,7 @@
                             </div>
                         </div>
                         <!-- work single item  -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 branding">
+                        <div class="col-lg-4 col-md-6 col-sm-6 web">
                             <div class="work-single-item">
                                 <a class="zoom-image" href="work-03.jpg">
                                     <div class="tilt-wrap">
@@ -234,7 +232,7 @@
                             </div>
                         </div>
                         <!-- work single item  -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 branding">
+                        <div class="col-lg-4 col-md-6 col-sm-6 web">
                             <div class="work-single-item">
                                 <a class="zoom-image" href="work-05.jpg">
                                     <div class="tilt-wrap">
@@ -245,7 +243,7 @@
                             </div>
                         </div>
                         <!-- work single item  -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 uiux">
+                        <div class="col-lg-4 col-md-6 col-sm-6 web">
                             <div class="work-single-item">
                                 <a class="zoom-image" href="work-06.jpg">
                                     <div class="tilt-wrap">
@@ -289,8 +287,8 @@
                         <div class="footer-social">
                             <a href="https://www.github.com/devmarufa/" target="_blank">Github</a>
                             <a href="https://www.facebook.com/devmarufa/" target="_blank">Facebook</a>
-                            <a href="#https://www.twitter.com/devmarufa/" target="_blank">Twitter</a>
-                            <a href="#https://www.instagram.com/devmarufa/" target="_blank">Instagram</a>
+                            <a href="https://www.twitter.com/devmarufa/" target="_blank">Twitter</a>
+                            <a href="https://www.instagram.com/devmarufa/" target="_blank">Instagram</a>
                         </div>
                         <p class="footer-copyright">© Copyright 2020</p>
                     </div>
