--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                                 <a class="zoom-image" href="work-01.jpg">
                                     <div class="tilt-wrap">
                                         <img class="img-fluid" src="work-01.jpg" alt="">
-                                        <h6>Gold Left Palm</h6>
+                                        <h6>Eventa</h6>
                                     </div>
                                 </a>
                             </div>
@@ -204,7 +204,7 @@
                                 <a class="zoom-image" href="work-02.jpg">
                                     <div class="tilt-wrap">
                                         <img class="img-fluid" src="work-02.jpg" alt="">
-                                        <h6>Shuvashini</h6>
+                                        <h6>Law office</h6>
                                     </div>
                                 </a>
                             </div>
@@ -215,7 +215,7 @@
                                 <a class="zoom-image" href="work-03.jpg">
                                     <div class="tilt-wrap">
                                         <img class="img-fluid" src="work-03.jpg" alt="">
-                                        <h6>Duck in Gold</h6>
+                                        <h6>Petclub</h6>
                                     </div>
                                 </a>
                             </div>
@@ -226,7 +226,7 @@
                                 <a class="zoom-image" href="work-04.jpg">
                                     <div class="tilt-wrap">
                                         <img class="img-fluid" src="work-04.jpg" alt="">
-                                        <h6>Black Body Paint</h6>
+                                        <h6>Landin</h6>
                                     </div>
                                 </a>
                             </div>
@@ -237,7 +237,7 @@
                                 <a class="zoom-image" href="work-05.jpg">
                                     <div class="tilt-wrap">
                                         <img class="img-fluid" src="work-05.jpg" alt="">
-                                        <h6>Work Harder</h6>
+                                        <h6>socale</h6>
                                     </div>
                                 </a>
                             </div>
@@ -248,7 +248,7 @@
                                 <a class="zoom-image" href="work-06.jpg">
                                     <div class="tilt-wrap">
                                         <img class="img-fluid" src="work-06.jpg" alt="">
-                                        <h6>Brown Water</h6>
+                                        <h6>chaty</h6>
                                     </div>
                                 </a>
                             </div>
