--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <body id="body" data-spy="scroll" data-target="#menu-list">
 
     <!--  start page loader  -->
-    
-	<div id="preloader">
-		<div class="scroll-static"></div>
-	</div>
+
+    <div id="preloader">
+        <div class="scroll-static"></div>
+    </div>
 
     <!--  end page loader  -->
 
@@ -96,7 +96,7 @@
                                     <span class="wow slideInLeft" data-wow-delay=".2s">Marufa</span>
                                 </h2>
                                 <p>
-                                    <span class="wow slideInLeft" data-wow-delay=".5s">Website  Designer. Based in Bangladesh.</span>
+                                    <span class="wow slideInLeft" data-wow-delay=".5s">Website Designer. Based in Bangladesh.</span>
                                 </p>
                             </div>
                         </div>
@@ -112,7 +112,7 @@
                         <div class="col-md-12">
                             <!-- section heading -->
                             <h3 class="wrapper-heading">About Me</h3>
-                            
+
                             <h4 class="about-sub-heading">I am a Freelancer</h4>
                             <p class="about-text">Working as a Front-end-developer</p>
 
@@ -190,7 +190,7 @@
                         <!-- work single item  -->
                         <div class="col-lg-4 col-md-6 col-sm-6 web">
                             <div class="work-single-item">
-                                <a class="zoom-image" href="work-01.jpg">
+                                <a href="https://devmarufa.github.io/portfolio/works/eventa/" target="_blank">
                                     <div class="tilt-wrap">
                                         <img class="img-fluid" src="work-01.jpg" alt="">
                                         <h6>Eventa</h6>
@@ -201,7 +201,7 @@
                         <!-- work single item  -->
                         <div class="col-lg-4 col-md-6 col-sm-6 web">
                             <div class="work-single-item">
-                                <a class="zoom-image" href="work-02.jpg">
+                                <a href="https://devmarufa.github.io/portfolio/works/lawoffice/" target="_blank">
                                     <div class="tilt-wrap">
                                         <img class="img-fluid" src="work-02.jpg" alt="">
                                         <h6>Law office</h6>
@@ -212,7 +212,7 @@
                         <!-- work single item  -->
                         <div class="col-lg-4 col-md-6 col-sm-6 web">
                             <div class="work-single-item">
-                                <a class="zoom-image" href="work-03.jpg">
+                                <a href="https://devmarufa.github.io/portfolio/works/petclub/" target="_blank">
                                     <div class="tilt-wrap">
                                         <img class="img-fluid" src="work-03.jpg" alt="">
                                         <h6>Petclub</h6>
@@ -223,7 +223,7 @@
                         <!-- work single item  -->
                         <div class="col-lg-4 col-md-6 col-sm-6 web">
                             <div class="work-single-item">
-                                <a class="zoom-image" href="work-04.jpg">
+                                <a href="https://devmarufa.github.io/portfolio/works/landin/" target="_blank">
                                     <div class="tilt-wrap">
                                         <img class="img-fluid" src="work-04.jpg" alt="">
                                         <h6>Landin</h6>
@@ -234,7 +234,7 @@
                         <!-- work single item  -->
                         <div class="col-lg-4 col-md-6 col-sm-6 web">
                             <div class="work-single-item">
-                                <a class="zoom-image" href="work-05.jpg">
+                                <a href="https://devmarufa.github.io/portfolio/works/socale/" target="_blank">
                                     <div class="tilt-wrap">
                                         <img class="img-fluid" src="work-05.jpg" alt="">
                                         <h6>socale</h6>
@@ -245,7 +245,7 @@
                         <!-- work single item  -->
                         <div class="col-lg-4 col-md-6 col-sm-6 web">
                             <div class="work-single-item">
-                                <a class="zoom-image" href="work-06.jpg">
+                                <a href="https://devmarufa.github.io/portfolio/works/chaty/" target="_blank">
                                     <div class="tilt-wrap">
                                         <img class="img-fluid" src="work-06.jpg" alt="">
                                         <h6>chaty</h6>
@@ -272,7 +272,9 @@
                                 <p>I am happy to answer any questions you may have, please contact me anytime</p>
                             </div>
                             <div class="contact-info">
-                                <a href="mailto:marufajhuma1@gmail.com"><p class="d-inline-block"><span class="ti-email"></span>Marufajhuma1@gmail.com</p></a>
+                                <a href="mailto:marufajhuma1@gmail.com">
+                                    <p class="d-inline-block"><span class="ti-email"></span>Marufajhuma1@gmail.com</p>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -310,4 +312,3 @@
 </body>
 
 </html>
-
